--- a/client/src/css/timeline.css
+++ b/client/src/css/timeline.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.syncfusion.com/ej2/material.css");
+
 html,
 canvas,
 body,
@@ -7,6 +9,7 @@ body,
   height: 100%;
   margin: 0;
 }
+
 
 html {
   box-sizing: border-box;
@@ -35,7 +38,7 @@ html {
   margin: 10px;
 }
 
-.toolbar{
+.toolbars{
   align-items: center;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -64,7 +67,7 @@ html {
   font-size: 13px;
   width: 130px;
   height: 30px;
-  border-radius: 7px 0 0 7px;
+  border-radius: 7px 7px 7px 7px;
 }
 
 .mainButton{
